Solved deploy, refactored some code-structure.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,17 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <% include partials/head %>
-    </head>
-    <body>
-
-        <div>
-            <% include partials/header %>
-        </div>
-
-        <div>
-            <% include partials/footer %>
-        </div>
-
-    </body>
-</html>
+<h1>Index</h1>
