--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,2 +1,6 @@
 <meta charset="UTF-8">
 <title>Beer</title>
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+<link rel="stylesheet" href="/css/styles.css">
