--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,3 +1,9 @@
-<div>
-	header
+<div id="logo">
+	<h1>Beer stash</h1>
+</div>
+<div id="nav">
+	<ul>
+		<li><a href="/">Home</a></li>
+		<li><a href="/login">Log in</a></li>
+	</ul>
 </div>
