--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,34 @@
-<h1>Index</h1>
+<div class="row">
+	<div class="col-md-5 col-md-offset-0">
+		<h3>Information</h3>
+	</div>
+	<div class="col-md-3 col-md-offset-2">
+		<form class="form-signin" method="post" action="/login">
+			<h3 class="form-signin-heading">Sign in</h3>
+			<label for="email" class="sr-only">Email</label>
+			<input type="email" name="email" id="email" class="form-control" placeholder="Email" required autofocus>
+			<label for="password" class="sr-only">Password</label>
+			<input type="password" name="password" id="password" class="form-control" placeholder="Password" required>
+			<button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+		</form>
+		<p class="text-center">
+			or sign in with<br />
+			<a href="/auth/google" class="btn btn-danger"><span class="fa fa-google-plus"></span>Google</a>
+		</p>
+		<p class="text-center">
+			or<br />
+			<a href="/signup">Sign up</a>
+		</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-md-4 col-sm-6">
+		<h4>Organize your stash</h4>
+	</div>
+	<div class="col-md-4 col-sm-6">
+		<h4>Share your stash with friends</h4>
+	</div>
+	<div class="col-md-4">
+		<h4>Find rares</h4>
+	</div>
+</div>
