--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,17 +4,16 @@
         <% include partials/head %>
     </head>
     <body>
-
-        <div>
-            <% include partials/header %>
+        <% include partials/header %>
+        <div class="container">
+            <div id="main-content">
+                <%- body %>
+            </div>
+            <hr />
+            <div>
+                <% include partials/footer %>
+            </div>
         </div>
-        <div>
-            <%- body %>
-        </div>
-        <div>
-            <% include partials/footer %>
-        </div>
-
     </body>
     <% include partials/scripts %>
 </html>
