--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,9 +1,24 @@
-<div id="logo">
-	<h1>Beer stash</h1>
-</div>
-<div id="nav">
-	<ul>
-		<li><a href="/">Home</a></li>
-		<li><a href="/login">Log in</a></li>
-	</ul>
-</div>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">Beer stash</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li><a href="/">Home</a></li>
+                <% if(user){ %>
+                    <li><a href="/logout">Log out</a></li>
+                <% } else { %>
+                    <li><a href="/signup">Sign up</a></li>
+                    <li><a href="/login">Log in</a></li>
+                <% } %>
+            </ul>
+        </div>
+    </div>
+</nav>
