--- a/views/partials/scripts.ejs
+++ b/views/partials/scripts.ejs
@@ -1,2 +1,3 @@
 <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
-<script tye="text/javascript" src="/javascript/script.js"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+<script src="/javascript/script.js" tye="text/javascript"></script>
