--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,7 +1,7 @@
 <div class="row">
-	<div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2">
-		<h2>Login</h2>
-		<form action="/login" method="post">
+	<div class="col-md-4 col-md-offset-4">
+		<h2>Sign up</h2>
+		<form action="/signup" method="post">
 		    <div class="form-group">
 		        <label>Email</label>
 		        <input type="text" class="form-control" name="email">
@@ -11,7 +11,7 @@
 		        <input type="password" class="form-control" name="password">
 		    </div>
 
-		    <button type="submit" class="btn btn-warning btn-lg">Login</button>
+		    <button type="submit" class="btn btn-warning btn-lg">Signup</button>
 		</form>
 	</div>
 </div>
