--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,14 +1,17 @@
 <div class="row">
 	<div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2">
 		<h2>Login</h2>
+		<% if(message.length > 0) { %>
+			<div class="alert alert-danger"><%= message %></div>
+		<% } %>
 		<form action="/login" method="post">
 		    <div class="form-group">
-		        <label>Email</label>
-		        <input type="text" class="form-control" name="email">
+		        <labele for="email">Email</label>
+		        <input type="text" class="form-control" name="email" id="email">
 		    </div>
 		    <div class="form-group">
-		        <label>Password</label>
-		        <input type="password" class="form-control" name="password">
+		        <label for="password">Password</label>
+		        <input type="password" class="form-control" name="password" id="password">
 		    </div>
 
 		    <button type="submit" class="btn btn-warning btn-lg">Login</button>
