--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,9 +1,17 @@
 <div class="row">
     <div class="col-sm-12">
-        <p>
-            <strong>First name</strong>: <%= user.firstName %><br>
-            <strong>Last name</strong>: <%= user.lastName %><br>
-        </p>
+        <form action="/profile" method="post">
+            <div class="form-group">
+                <label for="firstName">First name</label>
+                <input type="text" class="form-control" name="firstName" id="firstName" value="<%= user.firstName %>" />
+            </div>
+            <div class="form-group">
+                <label for="lastName">Last name</label>
+                <input type="text" class="form-control" name="lastName" id="lastName" value="<%= user.lastName %>" />
+            </div>
+
+            <button type="submit" class="btn btn-warning btn-lg">Save</button>
+        </form>
     </div>
 </div>
 
@@ -11,10 +19,16 @@
     <div class="col-sm-6">
         <div class="well">
             <h3 class="text-danger">Local</h3>
-
+            <% if(user.local.email) { %>
             <p>
                 <strong>email</strong>: <%= user.local.email %><br>
                 <strong>password</strong>: <%= user.local.password %><br>
+            </p>
+            <p>
+                <a href="/unlink/local" class="btn btn-default">Unlink</a>
+            <% } else {%>
+                <a href="/connect/local" class="btn btn-default">Connect</a>
+            <% } %>
             </p>
 
         </div>
@@ -23,12 +37,18 @@
     <div class="col-sm-6">
         <div class="well">
             <h3 class="text-danger"><span class="fa fa-google-plus"></span> Google</h3>
-
+            <% if(user.google.token) { %>
             <p>
                 <strong>id</strong>: <%= user.google.id %><br>
                 <strong>token</strong>: <%= user.google.token %><br>
                 <strong>email</strong>: <%= user.google.email %><br>
                 <strong>name</strong>: <%= user.google.name %>
+            </p>
+            <p>
+                <a href="/unlink/google" class="btn btn-default">Unlink</a>
+            <% } else {%>
+                <a href="/connect/google" class="btn btn-default">Connect</a>
+            <% } %>
             </p>
 
         </div>
