--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,5 +16,13 @@
 
 		    <button type="submit" class="btn btn-warning btn-lg">Login</button>
 		</form>
+		<p class="text-center">
+			or sign in with<br />
+			<a href="/auth/google" class="btn btn-danger"><span class="fa fa-google-plus"></span>Google</a>
+		</p>
+		<p class="text-center">
+			or<br />
+			<a href="/signup">Sign up</a>
+		</p>
 	</div>
 </div>
