--- a/views/connect_local.ejs
+++ b/views/connect_local.ejs
@@ -13,7 +13,7 @@
 		<form action="/connect/local" method="post">
 		    <div class="form-group">
 		        <label for="firstName">First name</label>
-		        <input type="text" class="form-control" name="firstName" id="firstName">
+		        <input type="text" class="form-control" name="firstName" id="firstName" value="<%= (user) ? user.firstName : '' %>">
 		    </div>
 		    <div class="form-group">
 		        <label ="lastName">Last name</label>
