--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,5 +1,14 @@
 <div class="row">
     <div class="col-sm-12">
+        <%
+        if(message && message.length > 0) {
+            for(var i = 0; i < message.length; i++){
+        %>
+            <div class="alert alert-danger"><%= message[i] %></div>
+        <%
+            }
+        }
+        %>
         <form action="/profile" method="post">
             <div class="form-group">
                 <label for="firstName">First name</label>
