--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,28 +1,8 @@
 <div class="row">
 	<div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2">
-		<h2>Login</h2>
 		<% if(message.length > 0) { %>
 			<div class="alert alert-danger"><%= message %></div>
 		<% } %>
-		<form action="/login" method="post">
-		    <div class="form-group">
-		        <labele for="email">Email</label>
-		        <input type="text" class="form-control" name="email" id="email">
-		    </div>
-		    <div class="form-group">
-		        <label for="password">Password</label>
-		        <input type="password" class="form-control" name="password" id="password">
-		    </div>
-
-		    <button type="submit" class="btn btn-warning btn-lg">Login</button>
-		</form>
-		<p class="text-center">
-			or sign in with<br />
-			<a href="/auth/google" class="btn btn-danger"><span class="fa fa-google-plus"></span>Google</a>
-		</p>
-		<p class="text-center">
-			or<br />
-			<a href="/signup">Sign up</a>
-		</p>
+		<% include partials/login_form %>
 	</div>
 </div>
