--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,7 +13,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="/">Home</a></li>
                 <% if(user){ %>
-                    <li><a href="/profile">Profile</a></li>
+                    <li><a href="/profile">Account</a></li>
                     <li><a href="/logout">Log out</a></li>
                 <% } else { %>
                     <li><a href="/signup">Sign up</a></li>
