--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,5 +1,5 @@
 <div class="row">
-	<div class="col-md-4 col-md-offset-4">
+	<div class="col-md-6 col-md-offset-3">
 		<h2>Sign up</h2>
 		<%
 		if(message && message.length > 0) {
@@ -10,29 +10,39 @@
 			}
 		}
 		%>
-		<form action="/signup" method="post">
+		<form action="/signup" method="post" class="form-horizontal">
 		    <div class="form-group">
-		        <label for="firstName">First name</label>
-		        <input type="text" class="form-control" name="firstName" id="firstName">
+		        <label for="firstName" class="col-md-4 control-label">First name <span class="required">*</span> </label>
+		        <div class="col-md-8">
+		        	<input type="text" class="form-control" name="firstName" id="firstName">
+		        </div>
 		    </div>
 		    <div class="form-group">
-		        <label ="lastName">Last name</label>
-		        <input type="text" class="form-control" name="lastName" id="lastName">
+		        <label ="lastName" class="col-md-4 control-label">Last name <span class="required">*</span></label>
+		        <div class="col-md-8">
+		        	<input type="text" class="form-control" name="lastName" id="lastName">
+		        </div>
 		    </div>
 		    <div class="form-group">
-		        <label for="email">Email</label>
-		        <input type="text" class="form-control" name="email" id="email">
+		        <label for="email" class="col-md-4 control-label">E-mail <span class="required">*</span></label>
+		        <div class="col-md-8">
+		        	<input type="text" class="form-control" name="email" id="email">
+		        </div>
 		    </div>
 		    <div class="form-group">
-		        <label for="password">Password</label>
-		        <input type="password" class="form-control" name="password" id="password">
+		        <label for="password" class="col-md-4 control-label">Password <span class="required">*</span></label>
+		        <div class="col-md-8">
+		        	<input type="password" class="form-control" name="password" id="password">
+		        </div>
 		    </div>
 		    <div class="form-group">
-		        <label for="password_confirm">Confirm Password</label>
-		        <input type="password" class="form-control" name="password_confirm" id="password_confirm">
+		        <label for="password_confirm" class="col-md-4 control-label">Confirm Password <span class="required">*</span></label>
+		        <div class="col-md-8">
+		        	<input type="password" class="form-control" name="password_confirm" id="password_confirm">
+		        </div>
 		    </div>
 
-		    <button type="submit" class="btn btn-warning btn-lg">Signup</button>
+		    <button type="submit" class="btn btn-primary pull-right">Signup</button>
 		</form>
 	</div>
 </div>
