--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,11 @@
 <div class="row">
-	<div class="col-sm-12">
-		<p>footer</p>
+	<div class="col-sm-6 text-center">
+		<p>Beer stash</p>
+		<p>Andreas Fridlund</p>
+		<p>2015</p>
+	</div>
+	<div class="col-sm-6 text-center">
+		<p>Webbteknik II</p>
+		<p>1dv449 - Linnéuniversitetet</p>
 	</div>
 </div>
