--- a/views/partials/login_form.ejs
+++ b/views/partials/login_form.ejs
@@ -6,11 +6,13 @@
 	<input type="password" name="password" id="password" class="form-control" placeholder="Password" required>
 	<button class="btn btn-primary btn-block" type="submit">Sign in</button>
 </form>
-<p class="text-center">
-	or sign in with<br />
-	<a href="/auth/google" class="btn btn-danger"><span class="fa fa-google-plus"></span>Google</a>
-</p>
-<p class="text-center">
-	or<br />
-	<a href="/signup">Sign up</a>
-</p>
+<div>
+	<p class="text-center">or sign in with</p>
+	<a href="/auth/google" class="btn btn-danger btn-block"><span class="fa fa-google-plus"></span>Google</a>
+</div>
+<div>
+	<p class="text-center">
+		or<br />
+		<a href="/signup">Sign up</a>
+	</p>
+</div>
