--- a/views/partials/scripts.ejs
+++ b/views/partials/scripts.ejs
@@ -1,3 +1,4 @@
 <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 <script src="/javascript/script.js" tye="text/javascript"></script>
