--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -56,3 +56,32 @@ h1,h2,h3,h4,h5,h6{
 .list>.row:hover{
 	background:#e6e6e6;
 }
+
+/* Offline cover */
+#offline-cover{
+	display:none;
+	position:fixed;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+	background-image:url('/images/offline-bg.png');
+	z-index:10000;
+}
+#offline-container{
+	background-color: #000;
+    padding: 25px 0;
+    position: absolute;
+    text-align: center;
+    top: 200px;
+    width: 100%;
+}
+#offline-container h2{
+	font-size: 3em;
+	color:#fff;
+}
+
+#offline-container p{
+	font-size: 1.5em;
+	color:#eee;
+}
