--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,17 +7,18 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">Beer stash</a>
+            <a class="navbar-brand" href="<%= (user) ? '/stash' : '/' %>">Beer stash</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/">Home</a></li>
+                
                 <% if(user){ %>
+                    <li><a href="/stash">My Stash</a></li>
                     <li><a href="/search">Search</a></li>
-                    
                     <li><a href="/profile">Account</a></li>
                     <li><a href="/logout">Log out</a></li>
                 <% } else { %>
+                    <li><a href="/">Home</a></li>
                     <li><a href="/signup">Sign up</a></li>
                     <li><a href="/login">Log in</a></li>
                 <% } %>
